--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@
   text-align: center;
 }
 
+.responsive-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+@media (max-width: 200px) {
+  .responsive-container {
+    display: block;
+  }
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
